desktop/source/app/opencl.cxx
@@ -119,9 +119,7 @@ bool testOpenCLCompute(const Reference< XDesktop2 > &xDesktop, const OUString &r
 
 void Desktop::CheckOpenCLCompute(const Reference< XDesktop2 > &xDesktop)
 {
-    if (getenv("SAL_DISABLE_OPENCL") ||
-        Application::IsSafeModeEnabled() ||
-        !officecfg::Office::Common::Misc::UseOpenCL::get())
+    if (!opencl::canUseOpenCL() || Application::IsSafeModeEnabled())
         return;
 
     SAL_INFO("opencl", "Initiating test of OpenCL device");
