include/opencl/openclwrapper.hxx
@@ -26,7 +26,8 @@
 
 #include <cstdio>
 
-namespace opencl {
+namespace opencl
+{
 
 struct KernelEnv
 {
@@ -55,6 +56,8 @@ struct OPENCL_DLLPUBLIC GPUEnv
 
 extern OPENCL_DLLPUBLIC GPUEnv gpuEnv;
 extern OPENCL_DLLPUBLIC sal_uInt64 kernelFailures;
+
+OPENCL_DLLPUBLIC bool canUseOpenCL();
 
 OPENCL_DLLPUBLIC bool generatBinFromKernelSource( cl_program program, const char * clFileName );
 OPENCL_DLLPUBLIC bool buildProgramFromBinary(const char* buildOption, GPUEnv* gpuEnv, const char* filename, int idx);
